- files.c:
  read_file()
	- If the file we're loading has already been detected as a DOS
	  or Mac formatted file, don't turn on NOCONVERT if we find
	  binary chars in it.  This is because if it's detected as
	  DOS/Mac format, at least one line has already been converted, 
	  so setting NOCONVERT (which is supposed to signal that none 
	  of the file should be converted) makes no sense. (DLR)
- nanorc.5:
	- Fix formatting error and update copyright year (Jordi).
	- Several enhancements (David Benbennick).

GNU nano 1.1.99pre3 - 2003.02.13
- General:
	- Translation updates (see po/ChangeLog for details).
	- Fix globals and externs such that nano will compile with
	  DISABLE_SPELLER (David Benbennick).
	- Fix unreasonable fill values by wrapping at length 0 instead
	  of erroring out, and don't start up if the window size is too
	  small but fill is set reasonably.  Changes to 
	  nano.c:global_init(), window_init(), and handle_sigwinch().
	  New macro MIN_EDITOR_COLS replaces MIN_FILL_LENGTH
	  (David Benbennick).
	- Change ngettext macro to P_(), to avoid a clash with the reserved C
	  __ identifier (Jordi).
	- Memory leak fixes for files.c:do_insertfile(),do_browser(),
	  nano.c:do_spell(), and search.c:do_replace() (David Benbennick).
	- Remove do_preserve_msg, as using -p still gives Pico-style
	  string behavior, so an annoying message every invocation is
	  probably unneeded (all cheer).
	- Change resetpos function to be global (now called 
	  resetstatuspos.  Fixes annoying but small odd problem with
	  cursor placement when inserting a file.  This needs to be done 
	  better in 1.3 (originally by David Lawrence Ramsey).
	  Added this issue to TODO.
- files.c:
  cwd_tab_completion()
	- Memory leak fix (David Benbennick).
  intput_tab()
	- Fix assumption that matches is null terminated (David 
	  Benbennick).
  load_history()
	- Fix segfault on loading huge strings from history file 
	  (David Benbennick).
  load_history(), save_history()